[gd_scene load_steps=14 format=3 uid="uid://bxod21vhp6sjl"]

[ext_resource type="Texture2D" uid="uid://jjmpsu3hyuj5" path="res://images/level1/casa (1).png" id="1_4lbbu"]
[ext_resource type="Script" path="res://scenes/level1.gd" id="1_hiby6"]
[ext_resource type="Texture2D" uid="uid://dkc47w7rneudd" path="res://images/level1/casa (3).png" id="2_vswgy"]
[ext_resource type="Texture2D" uid="uid://btsygrvnum6t1" path="res://images/level1/casa (2).png" id="3_vo24b"]
[ext_resource type="Texture2D" uid="uid://c0hok0lj1r0ve" path="res://images/level1/carta.png" id="5_dwutj"]
[ext_resource type="AudioStream" uid="uid://dtnjlf5u5jf4q" path="res://audio/music/rins-theme_loop.ogg" id="5_inwq8"]
[ext_resource type="Texture2D" uid="uid://dvgv4nlabso0m" path="res://images/level1/carta3.png" id="6_asgc1"]
[ext_resource type="AudioStream" uid="uid://lj7tkhcbp8eb" path="res://audio/effects/toktok.mp3" id="6_o16dr"]
[ext_resource type="Texture2D" uid="uid://d36r7lj5slomy" path="res://images/level1/tiempo.png" id="7_ctwbh"]
[ext_resource type="Texture2D" uid="uid://dm4uatwbqjifa" path="res://images/avatars/prota2.png" id="7_og6f4"]
[ext_resource type="AudioStream" uid="uid://d0dv5g4hpfnmu" path="res://audio/effects/jumppp11.ogg" id="8_7odsw"]
[ext_resource type="Script" path="res://scenes/Buttonlevel1.gd" id="8_81tau"]
[ext_resource type="AudioStream" uid="uid://b0dps0rypysmu" path="res://audio/effects/vgmenuhighlight.wav" id="11_skc8i"]

[node name="level1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hiby6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -388.0
offset_top = -384.0
offset_right = 636.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.745, 0.745)
texture = ExtResource("1_4lbbu")

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 124.0
offset_right = 1148.0
offset_bottom = 1024.0
scale = Vector2(0.745, 0.745)
texture = ExtResource("2_vswgy")

[node name="TextureRect3" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 124.0
offset_right = 1148.0
offset_bottom = 1024.0
scale = Vector2(0.745, 0.745)
texture = ExtResource("3_vo24b")

[node name="TextureRect4" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 124.21
offset_right = 1148.21
offset_bottom = 1024.0
scale = Vector2(0.745, 0.745)
texture = ExtResource("5_dwutj")

[node name="TextureRect5" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 124.21
offset_right = 1148.21
offset_bottom = 1024.0
scale = Vector2(0.745, 0.745)
texture = ExtResource("6_asgc1")

[node name="TextureRect6" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 124.21
offset_right = 1148.21
offset_bottom = 1024.0
scale = Vector2(0.745, 0.745)
texture = ExtResource("7_ctwbh")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_inwq8")
autoplay = true

[node name="toctoc" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_o16dr")
volume_db = 10.435

[node name="ups" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_7odsw")
volume_db = 10.435

[node name="action" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_skc8i")
volume_db = 10.435

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(2.365, 4.32)
layout_mode = 0
offset_left = 290.935
offset_top = 592.28
offset_right = 887.4
offset_bottom = 763.225

[node name="TextureRect4" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = -167.165
offset_top = 1.165
offset_right = 856.835
offset_bottom = 1025.17
scale = Vector2(0.166, 0.164826)
texture = ExtResource("7_og6f4")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 25.0
offset_right = 550.0
offset_bottom = 150.0
text = "Solo un turno m√°s"

[node name="Butonlevel1" type="Button" parent="."]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 768.0
flat = true
script = ExtResource("8_81tau")

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="button_up" from="Butonlevel1" to="Butonlevel1" method="_on_button_up"]
